play-recommendation/stage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: play-recommendation-stage
  labels:
    app.kubernetes.io/name: play-recommendation-stage
spec:
  ports:
    - port: 8090
      name: http
      targetPort: 8090
      nodePort: 30132
  selector:
    app.kubernetes.io/name: play-recommendation-stage
  type: NodePort
